# Spooler

./: .gitignore  CMakeLists.txt  README.md
Specs/: SPOOLER_Firmware_Spec_RevH_Final_TDS_Pin.rtf
port/: w6100_spi.c  w6100_spi.h
src/: main.c  modbus_server.c  modbus_server.h  pid.c  pid.h  stepper.c  stepper.h  stepper.pio  tension_ctrl.c  tension_ctrl.h
tools/: spooler_monitor.py
